test/TestPhases/typechecker/invalid/returnReceiverForNonVoid.blc
activity NonVoidReturn () returns bool
    await true
    return true
end

@[EntryPoint]
activity Main () ()
    return run NonVoidReturn()
end